# chatterapp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crud-app/: Dockerfile  database.py  models.py  requirements.txt  schemas.py
message-logger/: main.py  models.py  schemas.py
src/: generic.rs  logic.rs  main.rs  p2p.rs
