[package]
name = "chatterapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
futures = "0.3.25"
libp2p = { version = "0.50.0", features = ["dns", "floodsub", "identify", "mplex", "mdns", "noise", "macros", "tcp", "tokio", "yamux", "kad", "websocket", "request-response", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1.59"
bincode = "1.2.1"